Instant Address Standard/main/default/objects/Lead/fields/AddressChangeFlags__c.field-meta.xml
<CustomField>
    <fullName>AddressChangeFlags__c</fullName>
    <label>Address Change Flag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>