Instant Address Standard/main/default/objects/Lead/fields/AddressCOUNTYID__c.field-meta.xml
<CustomField>
    <fullName>AddressCOUNTYID__c</fullName>
    <label>Address County Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>