Instant Address Standard/main/default/objects/Lead/fields/AddressCOUNTYNAME__c.field-meta.xml
<CustomField>
    <fullName>AddressCOUNTYNAME__c</fullName>
    <label>Address County Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>