Instant Address Standard/main/default/objects/Lead/fields/AddressDeliveryPointValidation__c.field-meta.xml
<CustomField>
    <fullName>AddressDeliveryPointValidation__c</fullName>
    <label>Address DPV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>