Instant Address Standard/main/default/objects/Lead/fields/AddressDPC__c.field-meta.xml
<CustomField>
    <fullName>AddressDPC__c</fullName>
    <label>Address DPC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>