Instant Address Standard/main/default/objects/Lead/fields/AddressDPCD__c.field-meta.xml
<CustomField>
    <fullName>AddressDPCD__c</fullName>
    <label>Address DPCD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>