Instant Address Standard/main/default/objects/Lead/fields/AddressDPVFlag__c.field-meta.xml
<CustomField>
    <fullName>AddressDPVFlag__c</fullName>
    <label>Address DPV Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>