Instant Address Standard/main/default/objects/Lead/fields/AddressFIPS__c.field-meta.xml
<CustomField>
    <fullName>AddressFIPS__c</fullName>
    <label>Address FIPS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>