Instant Address Standard/main/default/objects/Lead/fields/AddressLatitude__c.field-meta.xml
<CustomField>
    <fullName>AddressLatitude__c</fullName>
    <label>Latitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>