Instant Address Standard/main/default/objects/Lead/fields/AddressLongitude__c.field-meta.xml
<CustomField>
    <fullName>AddressLongitude__c</fullName>
    <label>Longitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>