Instant Address Standard/main/default/objects/Lead/fields/AddressRDI__c.field-meta.xml
<CustomField>
    <fullName>AddressRDI__c</fullName>
    <label>Address RDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>