Instant Address Standard/main/default/objects/Lead/fields/AddressResponseFlag__c.field-meta.xml
<CustomField>
    <fullName>AddressResponseFlag__c</fullName>
    <label>Address Response Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>