Instant Address Standard/main/default/objects/Lead/fields/AddressValidationDate__c.field-meta.xml
<CustomField>
    <fullName>AddressValidationDate__c</fullName>
    <label>Address Validation Date</label>
    <type>Date</type>
</CustomField>