Instant Address Standard/main/default/objects/Lead/fields/AddressVerificationFlag__c.field-meta.xml
<CustomField>
    <fullName>AddressVerificationFlag__c</fullName>
    <label>Address Verification Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>