Instant Address Standard/main/default/objects/Lead/fields/Carrier_Route__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Route__c</fullName>
    <description>An alphanumeric code assigned to a mail delivery or collection route within a zip code.</description>
    <inlineHelpText>An alphanumeric code assigned to a mail delivery or collection route within a zip code.</inlineHelpText>
    <label>Carrier Route</label>
    <length>10</length>
    <type>Text</type>
</CustomField>