Instant Address Standard/main/default/objects/Lead/fields/SummaryFlags__c.field-meta.xml
<CustomField>
    <fullName>SummaryFlags__c</fullName>
    <label>SummaryFlags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>