Instant Address Standard/main/default/objects/Lead/fields/UITooltip__c.field-meta.xml
<CustomField>
    <fullName>UITooltip__c</fullName>
    <label>UITooltip</label>
    <length>200</length>
    <type>Text</type>
</CustomField>